--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Build
         run: npm run build
@@ -67,7 +67,7 @@ jobs:
 
             ${{ steps.changelog.outputs.CHANGELOG }}
 
-            **Full Changelog**: https://github.com/kkalmanowicz/abbababa-sdk/blob/main/CHANGELOG.md
+            **Full Changelog**: https://github.com/Abba-Baba/abbababa-sdk/blob/main/CHANGELOG.md
 
             ---
 
